* Updated plugin tags.
* Updated minimum required WordPress version to 5.0.
* Updated various links.
* Cleaned up code and documentation formatting.
* Added missing code documentation.
* Added missing variable declarations.
* Added missing scopes on methods.
* Improved several code sections for clarity.
* Fixed the "Order by ..." option in the Document Children widget couldn't be changed.

= 1.7.0 =
* WordPress 5.2 compatible.

= 1.6.1 =
* Fixed missing document categories and tags meta boxes when using the Block editor.
* Added pre-registration of document taxonomies on activation to help WordPress recognize them.
* Minor code improvements.

= 1.6.0 =
* WordPress 5.1 compatible.
* Added support for the WordPress Block editor to edit documents.
* Added an option to choose whether to use the Block editor to edit documents.
* Added an activation hook so that viewing documents does not require to visit Settings > Permalinks first.
* Renamed the file in charge of booting the plugin boot.php to class-documentation-controller.php to reflect the implemented class' name.

= 1.5.1 =
* Added some additional post type labels.
* Customized the post updated messages for the document post type.
* Fixed the output of Documentation_Renderer::list_children() to surround the items with corresponding ul tags.
  This also fixes the output of the [documentation_list_children] shortcode and the Documentation Children widget
  who use this method.
* Added the documentation_list_children_prefix and documentation_list_children_suffix filters.
* Security improvement, added ABSPATH checks.

= 1.5.0 =
* Replaced deprecated widget constructor in Documentation_Documents_Widget.
* Fixed use of undefined constant.
* Replaced use of the DOCUMENTATION_PLUGIN_DOMAIN constant with the string literal 'documentation'.
* Added the Add-Ons section.
* Added the Notice class.
* Added links to the documenation pages.
* Added the Document Categories widget.

= 1.4.1 =
* WordPress 4.8 compatibility tested.
