@@ -276,7 +276,7 @@ class Documentation_Categories_Widget extends WP_Widget {
 		extract( self::$defaults );
 
 		// title
-		$title = isset( $instance['title'] ) ? $instance['title'] : "";
+		$title = isset( $instance['title'] ) ? $instance['title'] : '';
 		echo '<p>';
 		echo sprintf( '<label title="%s">', sprintf( __( 'The widget title.', 'documentation' ) ) );
 		echo __( 'Title', 'documentation' );
@@ -339,7 +339,7 @@ class Documentation_Categories_Widget extends WP_Widget {
 		echo '</p>';
 
 		// orderby
-		$orderby = isset( $instance['orderby'] ) ? $instance['orderby'] : 'name';
+		$orderby = isset( $instance['orderby'] ) ? $instance['orderby'] : '';
 		echo '<p>';
 		echo sprintf( '<label title="%s">', __( 'Sorting criteria.', 'documentation' ) );
 		echo __( 'Order by ...', 'documentation' );
@@ -353,7 +353,7 @@ class Documentation_Categories_Widget extends WP_Widget {
 		echo '</p>';
 
 		// order
-		$order = isset( $instance['order'] ) ? $instance['order'] : 'ASC';
+		$order = isset( $instance['order'] ) ? $instance['order'] : '';
 		echo '<p>';
 		echo sprintf( '<label title="%s">', __( "Sort order.", 'documentation' ) );
 		echo __( 'Sort order', 'documentation' );
